modify print task

--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ repositories {
 
 task print() {
     doLast {
-        println "github push complete"
+        println "github push completed"
     }
 }
 
